--- a/specials_app.html
+++ b/specials_app.html
@@ -1,5 +1,6 @@
  <html>
     <head>
+	    <title>Special Finder</title>
           <script type="text/javascript">
           	// Create object that contains keys for today's date and the associated specials
 var specialDates = {
