--- a/specials_app.html
+++ b/specials_app.html
@@ -1,6 +1,9 @@
  <html>
     <head>
 	    <title>Special Finder</title>
+	    <meta name="viewport" content="width=device-width">
+     <meta name="mobile-web-app-capable" content="yes">
+     <link rel="icon" sizes="192x192" href="/headshot.png">
           <script type="text/javascript">
           	// Create object that contains keys for today's date and the associated specials
 var specialDates = {
