--- a/specials_app.html
+++ b/specials_app.html
@@ -3,7 +3,7 @@
 	    <title>Special Finder</title>
 	    <meta name="viewport" content="width=device-width">
      <meta name="mobile-web-app-capable" content="yes">
-     <link rel="icon" sizes="192x192" href="/headshot.png">
+     <link rel="icon" sizes="192x192" href="headshot.png">
           <script type="text/javascript">
           	// Create object that contains keys for today's date and the associated specials
 var specialDates = {
@@ -109,7 +109,7 @@ var special_meryl = merylSpecials[specialDates[date]];
         <div class="page-header">
         <h1>Specials for <span id="date">date</span></h1>
         </div>
-        <p>The special code for this date is "<span id="special_key">special key</span>".</p>
+        <p>The special code for this date is <nobr>"<span id="special_key">special key</span>".</nobr></p>
         <p>Ben's special is <strong><span id="special_ben">special name</span></strong>.</p>
         <p>Meryl's special is <strong><span id="special_meryl">special name</span></strong>.</p>
        </div>
