--- a/specials_app.html
+++ b/specials_app.html
@@ -109,7 +109,7 @@ var special_meryl = merylSpecials[specialDates[date]];
         <div class="page-header">
         <h1>Specials for <span id="date">date</span></h1>
         </div>
-        <p>The special code for this date is <nobr>"<span id="special_key">special key</span>".</nobr></p>
+        <p>The special code for this date is <span style="white-space:nowrap;">"<span id="special_key">special key</span>".</span></p>
         <p>Ben's special is <strong><span id="special_ben">special name</span></strong>.</p>
         <p>Meryl's special is <strong><span id="special_meryl">special name</span></strong>.</p>
        </div>
