--- a/specials.html
+++ b/specials.html
@@ -1,5 +1,7 @@
  <html>
     <head>
+          <meta name="viewport" content="width=device-width">
+ -        <meta name="mobile-web-app-capable" content="yes">
           <script type="text/javascript" src="special_finder.js"></script>
           <!-- Latest compiled and minified CSS -->
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
