--- a/specials.html
+++ b/specials.html
@@ -12,8 +12,9 @@
     </head>
     <body>
         <div class="container">
+        <img src="schoolLogo.png" class="img-responsive center-block" alt="Oakwood School Logo">
         <div class="page-header">
-        <img src="schoolLogo.png" align="left" vspace="10" hspace="10" alt="Oakwood School Logo">
+        
         <h3>Specials for <span id="date">date</span></h3>
         </div>
         <p>The special code for this date is "<span id="special_key">special key</span>".</p>
