--- a/specials.html
+++ b/specials.html
@@ -1,5 +1,6 @@
  <html>
     <head>
+          <title>Oakwood Specials Finder</title>
           <meta name="viewport" content="width=device-width">
  -        <meta name="mobile-web-app-capable" content="yes">
           <script type="text/javascript" src="special_finder.js"></script>
@@ -14,7 +15,6 @@
         <div class="container">
         <img src="schoolLogo.png" class="img-responsive center-block" alt="Oakwood School Logo">
         <div class="page-header">
-        
         <h3>Specials for <span id="date">date</span></h3>
         </div>
         <p>The special code for this date is "<span id="special_key">special key</span>".</p>
@@ -23,7 +23,6 @@
         <br/>
        
         <form>
-
           <button type="button" class="btn btn-primary" onclick="changeDate(-1);">Prev</button>
           <button type="button" class="btn btn-primary" onclick="changeDate(1);">Next</button>
 		    </form>
